--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    @apply bg-cover;
+    background-image: url("../../public//images/mario-bg.jpg");
+    text-align: center;
+
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+#board {
+    @apply grid grid-cols-3 gap-0 w-[540px] h-[540px] mx-auto border-4 border-white rounded-lg;
+    background-image: url("../../public/images/soil.png");
+    background-size: cover;
+    background-position: center;
+}
+
+#board div {
+    @apply w-[180px] h-[180px] bg-cover mx-auto;
+    background-image: url("../../public/images/pipe.png");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#board div img {
+    @apply w-[100px] h-[100px] select-none;
 }
